prevent layout shift when links appear
margin-top in a link's styling was raising the height of the text on that line when it appeared, and causing a slight layout shift. this fixes it.

--- a/style.css
+++ b/style.css
@@ -171,9 +171,8 @@ a.p, a.n, a.e, a.m {
   cursor: pointer;
 }
 a.p, a.n, a.e {
-  --padding-sides: calc(.2 * var(--basefontsize));
-  --padding-top: calc(var(--padding-sides) * .5);
-  padding: var(--padding-top) var(--padding-sides) 0;
+  --padding: calc(.2 * var(--basefontsize));
+  padding: 0 var(--padding);
   cursor: zoom-in;
 }
 
